--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,7 +15,7 @@
         <!-- Color de fondo de la splash screen -->
         <item name="windowSplashScreenBackground">@color/primary_background</item>
         <!-- Ícono animado de la splash screen -->
-        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_icon</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/wac_logo</item>
         <!-- Tema que se aplicará después de la splash screen -->
         <item name="postSplashScreenTheme">@style/Theme.WAC</item>
         <!-- Evitar ActionBar/header -->
